fixed footer alignment issue

--- a/css/flip.css
+++ b/css/flip.css
@@ -46,9 +46,6 @@
 
 
 
-.project img {
-    max-height: 200px;
-}
 
 .project div {
     display: flex;
